dynamic skipping rules
