# fuji_server/controllers/fair_object_controller.py
@@ -31,6 +31,7 @@ from fuji_server.helper.preprocessor import Preprocessor
 from fuji_server.models.body import Body  # noqa: E501
 from fuji_server.models.fair_results import FAIRResults  # noqa: E501
 from fuji_server.helper.identifier_helper import IdentifierHelper
+from fuji_server.controllers.RuleDTO import RuleDTO
 
 
 def assess_by_id(body):  # noqa: E501
@@ -62,6 +63,8 @@ def assess_by_id(body):  # noqa: E501
         usedatacite = body.use_datacite
         auth_token = body.auth_token
         auth_token_type = body.auth_token_type
+        rule_skip_list = body.rule_skip_list
+        rule_skip_list = rule_skip_list.split(',')
         logger = Preprocessor.logger
         logger.info('Assessment target: ' + identifier)
         print('Assessment target: ', identifier, flush=True)
@@ -88,18 +91,23 @@ def assess_by_id(body):  # noqa: E501
 
         ft.harvest_all_metadata()
 
+        '''
         uid_result, pid_result = ft.check_unique_persistent()
+        '''
+
         if ft.repeat_pid_check:
             ft.retrieve_metadata_external(ft.pid_url, repeat_mode=True)
             #ft.retrieve_metadata_external_xml_negotiated([ft.pid_url])
             #ft.retrieve_metadata_external_schemaorg_negotiated([ft.pid_url])
             #ft.retrieve_metadata_external_rdf_negotiated([ft.pid_url])
             #ft.retrieve_metadata_external_datacite()
+
+        '''
         core_metadata_result = ft.check_minimal_metatadata()
         content_identifier_included_result = ft.check_content_identifier_included()
         access_level_result = ft.check_data_access_level()
         #skip rule licence
-        #license_result = ft.check_license()
+        license_result = ft.check_license()
         related_resources_result = ft.check_relatedresources()
         check_searchable_result = ft.check_searchable()
         data_content_result = ft.check_data_content_metadata()
@@ -114,7 +122,56 @@ def assess_by_id(body):  # noqa: E501
         metadata_preserved_result = ft.check_metadata_preservation()
         standard_protocol_data_result = ft.check_standardised_protocol_data()
         standard_protocol_metadata_result = ft.check_standardised_protocol_metadata()
+        '''
 
+        result_dict = {}
+        result_dict["uid_result"] = ft.check_unique_persistent()[0]
+        result_dict["pid_result"] = ft.check_unique_persistent()[1]
+        result_dict["core_metadata_result"] = ft.check_minimal_metatadata()
+        result_dict["content_identifier_included_result"] = ft.check_content_identifier_included()
+        result_dict["access_level_result"] = ft.check_data_access_level()
+        result_dict["license_result"] = ft.check_license()
+        result_dict["related_resources_result"] = ft.check_relatedresources()
+        result_dict["check_searchable_result"] = ft.check_searchable()
+        result_dict["data_content_result"] = ft.check_data_content_metadata()
+        result_dict["data_file_format_result"] = ft.check_data_file_format()
+        result_dict["community_standards_result"] = ft.check_community_metadatastandards()
+        result_dict["data_provenance_result"] = ft.check_data_provenance()
+        result_dict["formal_metadata_result"] = ft.check_formal_metadata()
+        result_dict["semantic_vocab_result"] = ft.check_semantic_vocabulary()
+        result_dict["metadata_preserved_result"] = ft.check_metadata_preservation()
+        result_dict["standard_protocol_data_result"] = ft.check_standardised_protocol_data()
+        result_dict["standard_protocol_metadata_result"] = ft.check_standardised_protocol_metadata()
+
+        ruleDTOList = []
+        ruleDTOList.append(RuleDTO("FsF-F1-01D", "uid", False))
+        ruleDTOList.append(RuleDTO("FsF-F1-02D", "pid", False))
+        ruleDTOList.append(RuleDTO("FsF-F2-01M", "core_metadata", False))
+        ruleDTOList.append(RuleDTO("FsF-F3-01M", "content_identifier_included", False))
+        ruleDTOList.append(RuleDTO("FsF-F4-01M", "check_searchable", False))
+        ruleDTOList.append(RuleDTO("FsF-A1-01M", "access_level", False))
+        ruleDTOList.append(RuleDTO("FsF-A1-02M", "standard_protocol_metadata", False))
+        ruleDTOList.append(RuleDTO("FsF-A1-03D", "standard_protocol_data", False))
+        ruleDTOList.append(RuleDTO("FsF-A2-01M", "metadata_preserved", False))
+        ruleDTOList.append(RuleDTO("FsF-I1-01M", "formal_metadata", False))
+        ruleDTOList.append(RuleDTO("FsF-I2-01M", "semantic_vocab", False))
+        ruleDTOList.append(RuleDTO("FsF-I3-01M", "related_resources", False))
+        ruleDTOList.append(RuleDTO("FsF-R1-01MD", "data_content", False))
+        ruleDTOList.append(RuleDTO("FsF-R1.1-01M", "license", False))
+        ruleDTOList.append(RuleDTO("FsF-R1.2-01M", "data_provenance", False))
+        ruleDTOList.append(RuleDTO("FsF-R1.3-01M", "community_standards", False))
+        ruleDTOList.append(RuleDTO("FsF-R1.3-02D", "data_file_format", False))
+
+        for r in rule_skip_list:
+            for ru in ruleDTOList:
+                if r == ru.getId():
+                    ru.setSkip(True)
+
+        for rule in ruleDTOList:
+            if str(rule.getSkip()) == str(False):
+                results.append(result_dict.get(str(rule.getName()) + "_result"))
+
+        '''
         results.append(uid_result)
         results.append(pid_result)
         results.append(core_metadata_result)
@@ -135,6 +192,8 @@ def assess_by_id(body):  # noqa: E501
         #
         results.append(standard_protocol_data_result)
         results.append(standard_protocol_metadata_result)
+        '''
+
         debug_messages = ft.get_log_messages_dict()
         #ft.logger_message_stream.flush()
         summary = ft.get_assessment_summary(results)
